force-app/main/default/objects/Contact/fields/Active_Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_End_Date__c</fullName>
    <description>Stores calculated active membership end date for Person Account; used for renewal tracking and controlling access to benefits.</description>
    <formula>Account.Active_Membership_End_Date__c</formula>
    <label>Person - Active Membership End Date</label>
    <type>Date</type>
</CustomField>