force-app/main/default/objects/Contact/fields/Active_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_Type__c</fullName>
    <description>Stores active membership type for Person Account; used for entitlement management, segmentation, and reporting.</description>
    <formula>Account.Active_Membership_Type__c</formula>
    <label>Person - Active Membership Type</label>
    <type>Text</type>
</CustomField>