force-app/main/default/objects/Contact/fields/Craft_User_Activated__c.field-meta.xml
<CustomField>
    <fullName>Craft_User_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Craft User Activated</label>
    <type>Checkbox</type>
</CustomField>