force-app/main/default/objects/Contact/fields/Craft_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Craft_User_Id__c</fullName>
    <description>Stores external user ID; used for integration mapping.</description>
    <externalId>true</externalId>
    <label>Craft User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>