force-app/main/default/objects/Contact/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <description>Stores donor classification; used to segment donors and apply targeted communication and reporting.</description>
    <label>Person Donor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>