force-app/main/default/objects/Contact/fields/EmailAddress2__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress2__c</fullName>
    <description>Stores donor classification; used to segment donors and apply targeted communication and reporting.</description>
    <label>Person Email Address 2</label>
    <type>Email</type>
</CustomField>