force-app/main/default/objects/Contact/fields/EmailAddress3__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress3__c</fullName>
    <description>Stores additional email; used to ensure communication redundancy and avoid missed notifications.</description>
    <label>Person Email Address 3</label>
    <type>Email</type>
</CustomField>