force-app/main/default/objects/Contact/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date on which the individual&apos;s role or membership ended.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>