force-app/main/default/objects/Contact/fields/Payment_Correction_Needed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Correction_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if there is an issue with the contact&apos;s payment information (e.g., incorrect bank details, expired card) that requires follow-up.</description>
    <label>Payment Correction Needed</label>
    <type>Checkbox</type>
</CustomField>