force-app/main/default/objects/Contact/fields/Payment_Correction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Correction_Reason__c</fullName>
    <description>Provides details on why the contact&apos;s payment information needs correction. Required when the &quot;Payment Correction Needed&quot; checkbox is checked.</description>
    <label>Payment Correction Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>