force-app/main/default/objects/Contact/fields/PhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber2__c</fullName>
    <description>Stores secondary phone number; backup communication channel.</description>
    <label>Person Phone Number 2</label>
    <type>Phone</type>
</CustomField>