force-app/main/default/objects/Contact/fields/PhoneNumber3__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber3__c</fullName>
    <description>Stores additional phone number; redundancy in contact information.</description>
    <label>Person Phone Number 3</label>
    <type>Phone</type>
</CustomField>