force-app/main/default/objects/Contact/fields/SMSMMSNumber__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSNumber__c</fullName>
    <description>The phone number used for sending SMS or MMS messages to the individual.</description>
    <label>SMS/MMS Number</label>
    <type>Phone</type>
</CustomField>