force-app/main/default/objects/Contact/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date on which the individual&apos;s role or membership began.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>