force-app/main/default/objects/Contact/fields/Submittable_Submitter_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_Submitter_Id__c</fullName>
    <label>Submittable Submitter Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>