force-app/main/default/objects/Contact/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>The individual&apos;s or their organization&apos;s website URL.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>